# spider4ssc-zero-shot-llm

./: .gitignore  CITATION.cff  Makefile  NOTICE.md  README.md  pyproject.toml  requirements-dev.txt  requirements-gpu.txt
configs/: experiment.yaml  experiment_sm3_adapted.yaml  experiment_sm3_openai.yaml  models.yaml
docker/: compose.datastores.yml
prompts/: cypher_zero_shot.txt  sm3_adapted_cypher_zero_shot.txt  sm3_adapted_sparql_zero_shot.txt  sm3_adapted_sql_zero_shot.txt  sparql_zero_shot.txt  sql_zero_shot.txt
scripts/: run_matrix.sh  run_sm3_dev.sh  run_sm3_matrix.sh  run_sm3_openai.sh  run_sm3_test.sh  serve_datastores.sh  serve_dev.sh  serve_test.sh  serve_vllm.sh  setup_env_vars.sh  wait_for_vllm.py
src/spider4ssc_zeroshot/: cli.py  config.py  data.py  env.py  evaluate.py  openai_client.py  pipeline_validation.py  postprocess.py  prompting.py  report.py  run_generation.py  schema_extraction.py  schema_serialization.py  vllm_client.py
tests/: conftest.py  test_cli.py  test_config.py  test_data.py  test_datastore_entrypoint_scripts.py  test_datastore_scripts.py  test_env.py  test_evaluate.py  test_generation_resume.py  test_import.py  test_openai_client.py  test_pipeline_validation.py  test_postprocess.py  test_prompting.py  test_report.py  test_schema_serialization.py  test_serve_vllm_script.py  test_setup_env_vars_script.py  test_sm3_matrix_scripts.py  test_wait_for_vllm.py
tests/fixtures/tiny_spider4ssc/: test.json
