[build-system]
requires = ["setuptools>=80.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spider4ssc-zeroshot"
version = "0.1.0"
description = "Reproducible zero-shot vLLM baselines for Spider4SSC SQL, SPARQL, and Cypher."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "Apache-2.0" }
authors = [
  { name = "Martin Vejvar" }
]
dependencies = [
  "openai==1.99.9",
  "pydantic==2.11.7",
  "PyYAML==6.0.2",
  "typer==0.16.0",
  "rich==14.1.0",
  "pandas==2.3.1",
  "sqlparse==0.5.3",
  "tabulate==0.9.0",
  "tqdm==4.67.1",
  "requests==2.32.4",
  "huggingface-hub==0.34.4",
  "rdflib==7.1.4",
  "oxrdflib==0.4.0",
  "aiohttp==3.12.15",
  "neo4j==5.28.2",
  "aiosqlite==0.21.0"
]

[project.scripts]
spider4ssc-zeroshot = "spider4ssc_zeroshot.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["src/spider4ssc_zeroshot/vendor"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
